--- a/english.html
+++ b/english.html
@@ -49,7 +49,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#work">Work</a>
+                    <a class="nav-link" href="#work">Services</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#about">Lawyer</a>
@@ -123,7 +123,7 @@
                                     <li>5+ YEARS EXPIRIENCE</li>
                                     <li>390 DISPUTES</li>
                                     <li>3434 COURT HEARINGS</li>
-                                    <li>185 ИМОТНИ DISPUTES</li>
+                                    <li>185 PROPERTY DISPUTES</li>
                                     <li>92% SUCCESS RATE</li>
                                 </ul>
                             </div>
