--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#work">Работа</a>
+                    <a class="nav-link" href="#work">Услуги</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#about">Адвокат</a>
