--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
                     <p><i class="fas fa-mobile-alt"></i> 070 212 042</p>
-                    <p class="mailAdv"><i class="fas fa-envelope"></i> advokat.vladoaleksijevski@gmail.com</p>
+                    <p class="mailAdv"><i class="fas fa-envelope"></i> <a
+                            href="mailto:advokat.vladoaleksijevski@gmail.com">advokat.vladoaleksijevski@gmail.com</a>
+                    </p>
                 </div>
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Адвокат</p>
