--- a/index.html
+++ b/index.html
@@ -372,9 +372,11 @@
                 <div class="bottDiv">
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
-                    <p><i class="fas fa-mobile-alt"></i> 070 212 042</p>
+                    <p><i class="fas fa-mobile-alt"></i> <a href="tel:+38970745584"
+                            aria-label="Vlado Aleksijevski phone number">070 212 042</a></p>
                     <p class="mailAdv"><i class="fas fa-envelope"></i> <a
-                            href="mailto:advokat.vladoaleksijevski@gmail.com">advokat.vladoaleksijevski@gmail.com</a>
+                            href="mailto:advokat.vladoaleksijevski@gmail.com"
+                            aria-label="Vlado Aleksijevski email">advokat.vladoaleksijevski@gmail.com</a>
                     </p>
                 </div>
                 <div class="botDivAdv2">
