--- a/english.html
+++ b/english.html
@@ -342,15 +342,19 @@
                 <div class="bottDiv">
                     <p class="bottAdv">Lawyer</p>
                     <p>Aleksijevski Vlado</p>
-                    <p><i class="fas fa-mobile-alt"></i> 070 212 042</p>
+                    <p><i class="fas fa-mobile-alt"></i> <a href="tel:+38970212042"
+                            aria-label="Vlado Aleksijevski mobile phone number">070 212 042</a></p>
                     <p class="mailAdv"><i class="fas fa-envelope"></i> <a
-                            href="mailto:advokat.vladoaleksijevski@gmail.com">advokat.vladoaleksijevski@gmail.com</a>
+                            href="mailto:advokat.vladoaleksijevski@gmail.com"
+                            aria-label="Vlado Aleksijevski email">advokat.vladoaleksijevski@gmail.com</a>
                     </p>
                 </div>
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Lawyer</p>
                     <p>Aleksijevski Aleksandar</p>
-                    <p class="lastNum"><i class="fas fa-phone"></i> 046 511 608</p>
+                    <p class="lastNum"><i class="fas fa-phone"></i>
+                        <a href="tel:+38946511608" aria-label="Vlado Aleksijevski office phone number"> 046 511 608</a>
+                    </p>
 
                 </div>
             </div>
