--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
                 <div class="bottDiv">
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
-                    <p><i class="fas fa-mobile-alt"></i> <a href="tel:+38970745584"
-                            aria-label="Vlado Aleksijevski phone number">070 212 042</a></p>
+                    <p><i class="fas fa-mobile-alt"></i> <a href="tel:+38970212042"
+                            aria-label="Vlado Aleksijevski mobile phone number">070 212 042</a></p>
                     <p class="mailAdv"><i class="fas fa-envelope"></i> <a
                             href="mailto:advokat.vladoaleksijevski@gmail.com"
                             aria-label="Vlado Aleksijevski email">advokat.vladoaleksijevski@gmail.com</a>
@@ -382,7 +382,9 @@
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Адвокат</p>
                     <p>Алексијевски Александар</p>
-                    <p class="lastNum"><i class="fas fa-phone"></i> 046 511 608</p>
+                    <p class="lastNum"><i class="fas fa-phone"></i>
+                        <a href="tel:+38946511608" aria-label="Vlado Aleksijevski office phone number"> 046 511 608</a>
+                    </p>
                 </div>
             </div>
         </div>
