--- a/english.html
+++ b/english.html
@@ -230,7 +230,7 @@
         </div>
 
         <div class="row bgFen">
-            <div class="col-12"></div>
+            <div class="col-12 bgDark"></div>
         </div>
 
         <div class="row advokatRow advokatRow2">
