--- a/english.html
+++ b/english.html
@@ -275,7 +275,7 @@
                         <div class="carousel-item active">
                             <h4>Great knowledge of civil law and procedures, and thus full realization of my
                                 interests.</h4>
-                            <p>Ognen Mancevski</p>
+                            <p>O. M.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
@@ -285,26 +285,26 @@
                                 I could not meet. Alexander organized a call on Viber and Zoom
                                 immediately and what he said he would do, he did the best he could.
                             </h4>
-                            <p>Natalija Jordanovska</p>
+                            <p>N. J.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Top protection of creditor rights in bankruptcy proceedings. I recommend lawyer Vlado
                                 Aleksijevski.</h4>
-                            <p>Aleksandar Marinceski</p>
+                            <p>A. M.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>Excellent cooperation and loyalty to client. Recommendation from me.</h4>
-                            <p>Nikola Mickovski</p>
+                            <p>N. M.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>Availability at all times and creativity in protecting the client. Recomendations for
                                 laywer Aleksandar.</h4>
-                            <p>Goce Stefanovski</p>
+                            <p>G. S.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>Excellent resolution of a property dispute. No further drama or hassle.</h4>
-                            <p>Martin Blazevski</p>
+                            <p>M. B.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
@@ -312,11 +312,16 @@
                                 I have been trying to finish it for years. He worked very hard to the
                                 end and I am very grateful!
                             </h4>
-                            <p>Svetlana Bogdanoska</p>
+                            <p>S. B.</p>
                         </div>
                     </div>
 
                 </div>
+            </div>
+            <div class="col-10 offset-1">
+                <p class="text-center etickiKodeks">
+                    * The complete list of our clients is not available in accordance with the provisions of Code of Professional Ethics for Lawyers.
+                </p>
             </div>
         </div>
 
