--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
                         и силни судски практики.
                     </p>
                     <p>
-                        Познати сме по нашите креативни, аналитички, агресивни парници
-                        и подготвеност да преземеме тешки случаи.
+                        Познати сме по нашите креативни, аналитички, агресивни парници и
+                        подготвеност да преземеме тешки случаи.
                     </p>
                     <p>
-                        Ние ги анализираме своите противници и разбираме
-                        како да победиме за нашите клиенти.
+                        Ние ги анализираме своите противници и разбираме како да победиме
+                        за нашите клиенти.
                     </p>
 
                     <p>
@@ -264,10 +264,9 @@
                         на нашите клиенти.
                     </p>
 
-
                     <p>
-                        Секогаш сме подготвени да одиме во акција. Го наоѓаме
-                        најдобриот агол за правен напад на противникот.
+                        Секогаш сме подготвени да одиме во акција. Го наоѓаме најдобриот
+                        агол за правен напад на противникот.
                     </p>
                 </div>
             </div>
@@ -297,56 +296,63 @@
                                 Големо познавање на граѓанското право и процедури, а со тоа и
                                 целосно остварување на моите интереси.
                             </h4>
-                            <p>Огнен Манчевски</p>
+                            <p>О. М.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
-                                Најдобра адвокатска канцеларија. За време на
-                                COVID-19, очигледно не можев физички да се сретнам
-                                со адвокат Александар, па бев загрижена за ангажирање на адвокат со кој
-                                не можев да се сретнам. Александар организираше повик на Viber i Zoom
-                                веднаш и тоа што рече дека ќе го направи, го направи најдобро што може.
+                                Најдобра адвокатска канцеларија. За време на COVID-19,
+                                очигледно не можев физички да се сретнам со адвокат
+                                Александар, па бев загрижена за ангажирање на адвокат со кој
+                                не можев да се сретнам. Александар организираше повик на Viber
+                                i Zoom веднаш и тоа што рече дека ќе го направи, го направи
+                                најдобро што може.
                             </h4>
-                            <p>Наталија Јордановска</p>
+                            <p>Н. Ј.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Врвна заштита на доверителските права во стечајна постапка. Го
                                 препорачувам адвокат Владо Алексијевски.
                             </h4>
-                            <p>Александар Маринчески</p>
+                            <p>А. М.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Одлична соработка и лојалност кон својот клиент. Препорака од
                                 мене.
                             </h4>
-                            <p>Никола Мицковски</p>
+                            <p>Н. М.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Достапност во секое време и креативност во заштита на
                                 странката. Препорака за адвокат Александар.
                             </h4>
-                            <p>Гоце Стефаноски</p>
+                            <p>Г. С.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Одлично решавање на имотен спор. Без дополнителни драми и
                                 нервози.
                             </h4>
-                            <p>Мартин Блажевски</p>
+                            <p>М. Б.</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
                                 Владо Алексијевски ми помогна да завршам долгогодишно дело кое
-                                се обидувам да го завршам со години. Тој работеше многу вредно до
-                                крај и јас сум му многу благодарнa!
+                                се обидувам да го завршам со години. Тој работеше многу вредно
+                                до крај и јас сум му многу благодарнa!
                             </h4>
-                            <p>Светлана Богданоска</p>
+                            <p>С. Б.</p>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-10 offset-1">
+                <p class="text-center etickiKodeks">
+                    * Целосната листа на нашите клиенти не е достапна согласно одредбите од
+                    Кодексот за професионална етика на адвокатите.
+                </p>
             </div>
         </div>
 
@@ -358,12 +364,17 @@
 
             <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-up"
                 data-aos-duration="700">
-                <p class="street"><i class="fas fa-map-marker-alt" style="color: red;"></i> Булевар Туристичка бр.50,
-                    6000 Охрид</p>
-                <p class="workingHour"><i class="fas fa-clock"></i> Работно време: пон - пет од 08:00 до 16:00</p>
+                <p class="street">
+                    <i class="fas fa-map-marker-alt" style="color: red;"></i> Булевар
+                    Туристичка бр.50, 6000 Охрид
+                </p>
+                <p class="workingHour">
+                    <i class="fas fa-clock"></i> Работно време: пон - пет од 08:00 до
+                    16:00
+                </p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3705.9280368503714!2d20.801304556812237!3d41.11694211714864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1350dca1f21405b5%3A0x10fa66cca37d7344!2sBoulevard%20Turistichka%2050%2C%20Ohrid%206000!5e0!3m2!1sen!2smk!4v1596369379317!5m2!1sen!2smk"
-                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+                    frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"
                     id="googleMap"></iframe>
             </div>
 
@@ -372,10 +383,13 @@
                 <div class="bottDiv">
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
-                    <p><i class="fas fa-mobile-alt"></i> <a href="tel:070212042"
-                            aria-label="Vlado Aleksijevski mobile phone number">070 212 042</a></p>
-                    <p class="mailAdv"><i class="fas fa-envelope"></i> <a
-                            href="mailto:advokat.vladoaleksieski@gmail.com"
+                    <p>
+                        <i class="fas fa-mobile-alt"></i>
+                        <a href="tel:070212042" aria-label="Vlado Aleksijevski mobile phone number">070 212 042</a>
+                    </p>
+                    <p class="mailAdv">
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:advokat.vladoaleksieski@gmail.com"
                             aria-label="Vlado Aleksijevski email">advokat.vladoaleksieski@gmail.com</a>
                     </p>
                 </div>
@@ -383,14 +397,17 @@
                     <p class="bottAdv2">Адвокат</p>
                     <p>Алексијевски Александар</p>
 
-                    <p class="lastNum"><i class="fas fa-phone"></i>
+                    <p class="lastNum">
+                        <i class="fas fa-phone"></i>
 
-                        <a href="tel:046511608" aria-label="Vlado Aleksijevski office phone number"> 046 511 608</a>
+                        <a href="tel:046511608" aria-label="Vlado Aleksijevski office phone number">
+                            046 511 608</a>
                     </p>
-                    <p class="mailAdv"><i class="fas fa-envelope"></i> <a href="mailto:advokataa@t-home.mk"
+                    <p class="mailAdv">
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:advokataa@t-home.mk"
                             aria-label="Aleksandar Aleksijevski email">advokataa@t-home.mk</a>
                     </p>
-
                 </div>
             </div>
         </div>
@@ -403,14 +420,11 @@
                             <div class="footer-copyright">
                                 © 2020 Vlado Aleksijevski, All Rights Reserved
                             </div>
-
                         </div>
                     </div>
                 </footer>
             </div>
         </div>
-
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -425,7 +439,6 @@
     <script>
         AOS.init();
     </script>
-
 
     <script src="js/main.js"></script>
 </body>
