--- a/english.html
+++ b/english.html
@@ -120,11 +120,11 @@
                         <div class="panel-collapse collapse" id="collapse1">
                             <div class="panel-body">
                                 <ul>
-                                    <li>5+ YEARS EXPIRIENCE</li>
-                                    <li>390 DISPUTES</li>
-                                    <li>3434 COURT HEARINGS</li>
-                                    <li>185 PROPERTY DISPUTES</li>
-                                    <li>92% SUCCESS RATE</li>
+                                    <li>7+ Years expirience</li>
+                                    <li>Debt collection and receivables</li>
+                                    <li>Family and marital disputes</li>
+                                    <li>Property - legal relations</li>
+                                    <li>Obligation relations</li>
                                 </ul>
                             </div>
                         </div>
@@ -143,10 +143,10 @@
                         <div class="panel-collapse collapse" id="collapse2">
                             <div class="panel-body">
                                 <ul>
-                                    <li>5+ YEARS EXPIRIENCE</li>
-                                    <li>150 CLIENTS</li>
-                                    <li>894 COURT HEARINGS</li>
-                                    <li>85% SUCCESS RATE</li>
+                                    <li>6+ Years expirience</li>
+                                    <li>Representation of damaged / accused parties at all stages of the procedure</li>
+                                    <li>Violation of provisions of tax and customs procedures</li>
+                                    <li>Misdemeanor proceedings</li>
                                 </ul>
                             </div>
                         </div>
@@ -166,10 +166,11 @@
                         <div class="panel-collapse collapse" id="collapse3">
                             <div class="panel-body">
                                 <ul>
-                                    <li>6+ YEARS EXPIRIENCE</li>
-                                    <li>273 DISPUTES</li>
-                                    <li>BANKRUPTCY PROCEEDINGS</li>
-                                    <li>12.456.978,00 Den SAVED FOR BUSINESSES</li>
+                                    <li>7+ Years expirience</li>
+                                    <li>Bankruptcy, reorganization and trade disputes</li>
+                                    <li>Corporate governance and business law</li>
+                                    <li>Insurance</li>
+                                    <li>Mergers, divisions and mergers of companies</li>
                                 </ul>
                             </div>
                         </div>
@@ -188,10 +189,10 @@
                         <div class="panel-collapse collapse" id="collapse4">
                             <div class="panel-body">
                                 <ul>
-                                    <li>MEDIATION</li>
-                                    <li>LEGAL ADVICE</li>
-                                    <li>REPRESENTATION</li>
-                                    <li>COPYRIGHT PROTECTION</li>
+                                    <li>Preparation and analysis of legal documentation</li>
+                                    <li>Legal advice</li>
+                                    <li>Representation before all judicial and administrative bodies</li>
+                                    <li>Out-of-court disputes</li>
                                 </ul>
                             </div>
                         </div>
@@ -320,7 +321,7 @@
             </div>
             <div class="col-10 offset-1">
                 <p class="text-center etickiKodeks">
-                    * The complete list of our clients is not available in accordance with the provisions of Code of Professional Ethics for Lawyers.
+                    * The list of our clients is not available due to general restrictions imposed by the Macedonian Bar Association.
                 </p>
             </div>
         </div>
