--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                         <div class="panel-collapse collapse" id="collapse1">
                             <div class="panel-body">
                                 <ul>
-                                    <li>5+ ГОДИНИ ИСКУСТВО</li>
-                                    <li>390 СПОРОВИ</li>
-                                    <li>3434 СУДСКИ РОЧИШТА</li>
-                                    <li>185 ИМОТНИ СПОРОВИ</li>
-                                    <li>92% УСПЕХ</li>
+                                    <li>7+ Години искуство</li>
+                                    <li>Наплата на долгови и побарувања</li>
+                                    <li>Семејни и брачни спорови</li>
+                                    <li>Имотно – правни односи</li>
+                                    <li>Облигациони односи</li>
                                 </ul>
                             </div>
                         </div>
@@ -141,10 +141,10 @@
                         <div class="panel-collapse collapse" id="collapse2">
                             <div class="panel-body">
                                 <ul>
-                                    <li>5+ ГОДИНИ ИСКУСТВО</li>
-                                    <li>150 КЛИЕНТИ</li>
-                                    <li>894 СУДСКИ РОЧИШТА</li>
-                                    <li>85% УСПЕХ</li>
+                                    <li>6+ Години искуство</li>
+                                    <li>Застапување на оштетени/обвинети странки во сите стадиуми на постапката</li>
+                                    <li>Повреда на одредби од даночни и цариснки постапки</li>
+                                    <li>Прекршочни постапки</li>
                                 </ul>
                             </div>
                         </div>
@@ -167,10 +167,11 @@
                         <div class="panel-collapse collapse" id="collapse3">
                             <div class="panel-body">
                                 <ul>
-                                    <li>6+ ГОДИНИ ИСКУСТВО</li>
-                                    <li>273 СПОРОВИ</li>
-                                    <li>СТЕЧАЈНИ ПОСТАПКИ</li>
-                                    <li>12.456.978,00 ДЕНАРИ ЗАШТЕДA ЗА ПРАВНИ ЛИЦА</li>
+                                    <li>7+ Години искуство</li>
+                                    <li>Стечај, реорганизација и трговски спорови</li>
+                                    <li>Корпоративно управување и деловно право</li>
+                                    <li>Осигурување</li>
+                                    <li>Спојувања, поделби и присоединувања на трговските друштва</li>
                                 </ul>
                             </div>
                         </div>
@@ -192,10 +193,10 @@
                         <div class="panel-collapse collapse" id="collapse4">
                             <div class="panel-body">
                                 <ul>
-                                    <li>МЕДИЈАЦИЈА</li>
-                                    <li>ПРАВНИ СОВЕТИ</li>
-                                    <li>ЗАСТАПУВАЊЕ</li>
-                                    <li>ЗАШТИТА НА АВТОРСКИ ПРАВА</li>
+                                    <li>Изготвување и анализа на правна документација</li>
+                                    <li>Правни совети</li>
+                                    <li>Застапување пред сите судски и административни органи</li>
+                                    <li>Вонсудски и вонпарнични спорови</li>
                                 </ul>
                             </div>
                         </div>
@@ -350,8 +351,7 @@
             </div>
             <div class="col-10 offset-1">
                 <p class="text-center etickiKodeks">
-                    * Целосната листа на нашите клиенти не е достапна согласно одредбите од
-                    Кодексот за професионална етика на адвокатите.
+                    * Листата на нашите клиенти не е достапна поради општите рестрикции наметнати од страна на Адвокатската комора на Македонија.
                 </p>
             </div>
         </div>
