--- a/english.html
+++ b/english.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Law office Vlado Aleksijeski" />
     <meta name="description" content="Law office Vlado Aleksijeski and Aleksandar Aleksijevski from Ohrid" />
     <meta name="keywords"
-        content="Lawyer Vlado Aleksijevski, Lawyer Aleksandar Aleksijevski, law practitioner, attorney at law, law office in Ohrid Republic of Macedonia, law office Aleksijevski" />
+        content="Lawyer Vlado Aleksijevski, Lawyer Aleksandar Aleksijevski, law practitioner, attorney at law, law office in Ohrid Republic of Macedonia, law office Aleksijevski, legal aid." />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
@@ -88,7 +88,7 @@
 
             <div class="col-12 col-xl-10 offset-xl-1 lady">
                 <div class="main" data-aos="fade-down" data-aos-duration="700">
-                    <h1 class="advH1">CREATIV<span class="dot">E.</span>
+                    <h1 class="advH1">SKILLFU<span class="dot">L.</span>
                         <br />
                         ANALYTICA<span class="dot">L.</span>
                         <br />
@@ -96,8 +96,8 @@
 
                     </h1>
 
-                    <a class="btn btnLanding" href="#work">LEARN MORE</a>
-                    <a class="btn btnLanding btnLanding2" href="#work"><i class="fas fa-angle-down fa-2x"></i></a>
+                    <a class="btn btnLanding" href="#work">LEGAL AID</a>
+                    <a class="btn btnLanding btnLanding2" href="#work">LEGAL AID</a>
 
                 </div>
 
@@ -321,7 +321,8 @@
             </div>
             <div class="col-10 offset-1">
                 <p class="text-center etickiKodeks">
-                    * The list of our clients is not available due to general restrictions imposed by the Macedonian Bar Association.
+                    * The list of our clients is not available due to general restrictions imposed by the Macedonian Bar
+                    Association.
                 </p>
             </div>
         </div>
