--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Адвокат Владо Алексијевски" />
     <meta name="description" content="Адвокат Владо Алексијевски и Адвокат Александар Алексијевски од Охрид" />
     <meta name="keywords"
-        content="Владо Алексијевски, Александар Алексијевски, правник, адвокат, правен застапник, адвокатска канцеларија, адвокатска канцеларија Алексијевски." />
+        content="Владо Алексијевски, Александар Алексијевски, правник, адвокат, правен застапник, адвокатска канцеларија, адвокатска канцеларија Алексијевски, правна помош." />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
@@ -84,15 +84,15 @@
             <div class="col-12 col-xl-10 offset-xl-1 lady">
                 <div class="main" data-aos="fade-down" data-aos-duration="700">
                     <h1 class="advH1">
-                        КРЕАТИВЕ<span class="dot">Н.</span>
+                        ВЕШT<span class="dot">И.</span>
                         <br />
-                        АНАЛИТИЧЕ<span class="dot">Н.</span>
+                        АНАЛИТИЧН<span class="dot">И.</span>
                         <br />
-                        ЕФИКАСЕ<span class="dot">Н.</span>
+                        ЕФИКАСН<span class="dot">И.</span>
                     </h1>
 
-                    <a class="btn btnLanding" href="#work">ПРИКАЖИ ПОВЕЌЕ</a>
-                    <a class="btn btnLanding btnLanding2" href="#work"><i class="fas fa-angle-down"></i></a>
+                    <a class="btn btnLanding" href="#work">ПРАВНА ПОМОШ</a>
+                    <a class="btn btnLanding btnLanding2" href="#work">ПРАВНА ПОМОШ</a>
                 </div>
             </div>
         </div>
@@ -351,7 +351,8 @@
             </div>
             <div class="col-10 offset-1">
                 <p class="text-center etickiKodeks">
-                    * Листата на нашите клиенти не е достапна поради општите рестрикции наметнати од страна на Адвокатската комора на Македонија.
+                    * Листата на нашите клиенти не е достапна поради општите рестрикции наметнати од страна на
+                    Адвокатската комора на Македонија.
                 </p>
             </div>
         </div>
