--- a/index.html
+++ b/index.html
@@ -385,13 +385,13 @@
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
                     <p>
-                        <i class="fas fa-mobile-alt"></i>
-                        <a href="tel:070212042" aria-label="Vlado Aleksijevski mobile phone number">070 212 042</a>
+                        <a href="tel:070212042" aria-label="Vlado Aleksijevski mobile phone number">
+                            <i class="fas fa-mobile-alt"></i> 070 212 042</a>
                     </p>
                     <p class="mailAdv">
-                        <i class="fas fa-envelope"></i>
-                        <a href="mailto:advokat.vladoaleksieski@gmail.com"
-                            aria-label="Vlado Aleksijevski email">advokat.vladoaleksieski@gmail.com</a>
+
+                        <a href="mailto:advokat.vladoaleksieski@gmail.com" aria-label="Vlado Aleksijevski email"> <i
+                                class="fas fa-envelope"></i> advokat.vladoaleksieski@gmail.com</a>
                     </p>
                 </div>
                 <div class="botDivAdv2">
@@ -399,15 +399,15 @@
                     <p>Алексијевски Александар</p>
 
                     <p class="lastNum">
-                        <i class="fas fa-phone"></i>
 
-                        <a href="tel:046511608" aria-label="Vlado Aleksijevski office phone number">
-                            046 511 608</a>
+
+                        <a href="tel:046511608" aria-label="Vlado Aleksijevski office phone number"> <i
+                                class="fas fa-phone"></i> 046 511 608</a>
                     </p>
                     <p class="mailAdv">
-                        <i class="fas fa-envelope"></i>
-                        <a href="mailto:advokataa@t-home.mk"
-                            aria-label="Aleksandar Aleksijevski email">advokataa@t-home.mk</a>
+
+                        <a href="mailto:advokataa@t-home.mk" aria-label="Aleksandar Aleksijevski email"> <i
+                                class="fas fa-envelope"></i> advokataa@t-home.mk</a>
                     </p>
                 </div>
             </div>
