--- a/english.html
+++ b/english.html
@@ -24,7 +24,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/styles.pure.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Vlado Aleksijeski</title>
 </head>
